Fix offline users on mobile

--- a/src/styles/components/_dialog.sass
+++ b/src/styles/components/_dialog.sass
@@ -280,6 +280,9 @@
 				color: $silver-chalice
 				@media screen and (max-width: 450px)
 					width: 100%
+					.user-last-seen
+						float: left
+						margin-left: 3%
 				.user-name
 					width: 60%
 					float: left
